--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</h2>
 
 			<div class="service_item">
-				<img src="https://w7.pngwing.com/pngs/898/516/png-transparent-car-autoservice-roadrunner-computer-icons-car-repair-purple-text-car-thumbnail.png" alt="">
+				<img src="service1.png" alt="">
 
 				<h3 class="text_center">Аренда и заказ микроавтобуса </h3>
 			</div>
@@ -90,7 +90,7 @@
 				</p>
 			</div>
 			<div class="review_item">
-				<img src="14.jpg">
+				<img src="14.png">
 
 				<p >
 					Не давно пользовались этой услугой, все понравилось😍 водитель приятный общительный. Приехали во время, как и планировали👍🏼 Цены не завышены. 
