--- a/index.html
+++ b/index.html
@@ -119,17 +119,27 @@
 		<section id="car_block" class="site_block">
 			<h2 class="text_center">
 				Автомобиль
-
 			</h2>	
-			<section>
-						<p>
-						 Надёжный автомобиль Mercedes Vito, USB.,AUX. Подогрев передних сидений, возможность развернуть второй ряд , просторный салон. В наличии фаркоп.
-					
+		
+			<div class="car_block_itm">
+				<img src="service1.png" alt="">
+			</div>
+			<div class="car_block_itm">
+				<img src="service1.png" alt="">
+			</div>
+			<div class="car_block_itm">
+				<img src="service1.png" alt="">
+			</div>
+			<div class="car_block_itm">
+				<img src="service1.png" alt="">
+			</div>
+			<div class="car_block_itm">
+				<img src="service1.png" alt="">
+			</div>
+			<div class="car_block_itm">
+				<img src="service1.png" alt="">
+			</div>
 
-						</p>
-
-					<img src="16.jpg" alt="">
-			</section>
 		</section>
 			
 		<section id="order_block" class="site_block grey_block">
