--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
 				<h3 class="text_center">Аренда и заказ микроавтобуса </h3>
 			</div>
 			<div class="service_item">
-				<img src="https://w7.pngwing.com/pngs/898/516/png-transparent-car-autoservice-roadrunner-computer-icons-car-repair-purple-text-car-thumbnail.png" alt="">
+				<img src="151.png" alt="">
 
 				<h3 class="text_center"> Поездка на море</h3>
 			</div>
 			<div class="service_item">
-				<img src="https://w7.pngwing.com/pngs/898/516/png-transparent-car-autoservice-roadrunner-computer-icons-car-repair-purple-text-car-thumbnail.png" alt="">
+				<img src="158.png" alt="">
 
 				<h3 class="text_center">Аскания-Нова </h3>
 			</div>
 
 			<div class="service_item">
-				<img src="https://w7.pngwing.com/pngs/898/516/png-transparent-car-autoservice-roadrunner-computer-icons-car-repair-purple-text-car-thumbnail.png" alt="">
+				<img src="165 .png" alt="">
 
 				<h3 class="text_center"> Встреча с аэропорта</h3>
 			</div>
 			<div class="service_item">
-				<img src="https://w7.pngwing.com/pngs/898/516/png-transparent-car-autoservice-roadrunner-computer-icons-car-repair-purple-text-car-thumbnail.png" alt="">
+				<img src="555.png" alt="">
 
 				<h3 class="text_center">Обслуживание  торжественных мероприятий</h3>
 			</div>
 			<div class="service_item">
-				<img src="https://w7.pngwing.com/pngs/898/516/png-transparent-car-autoservice-roadrunner-computer-icons-car-repair-purple-text-car-thumbnail.png" alt="">
+				<img src="596.png" alt="">
 
-				<h3 class="text_center">Горячие источник</h3>
+				<h3 class="text_center">Горячие источники</h3>
 			</div>
 
 			<div class="call_to_action">
@@ -125,19 +125,13 @@
 				<img src="service1.png" alt="">
 			</div>
 			<div class="car_block_itm">
-				<img src="service1.png" alt="">
+				<img src="100.png" alt="">
 			</div>
 			<div class="car_block_itm">
-				<img src="service1.png" alt="">
+				<img src="101.png" alt="">
 			</div>
 			<div class="car_block_itm">
-				<img src="service1.png" alt="">
-			</div>
-			<div class="car_block_itm">
-				<img src="service1.png" alt="">
-			</div>
-			<div class="car_block_itm">
-				<img src="service1.png" alt="">
+				<img src="2.png" alt="">
 			</div>
 
 		</section>
