--- a/index.html
+++ b/index.html
@@ -125,13 +125,20 @@
 				<img src="service1.png" alt="">
 			</div>
 			<div class="car_block_itm">
-				<img src="100.png" alt="">
+				<img src="101.png" alt="">
+			</div>
+			<div class="car_block_itm">
+				<img src="service1.png" alt="">
 			</div>
 			<div class="car_block_itm">
 				<img src="101.png" alt="">
 			</div>
+
 			<div class="car_block_itm">
-				<img src="2.png" alt="">
+				<img src="service1.png" alt="">
+			</div>
+			<div class="car_block_itm">
+				<img src="101.png" alt="">
 			</div>
 
 		</section>
@@ -140,6 +147,14 @@
 			<h2 class="text_center">
 				Заявка	
 			</h2>
+
+			<a href="tel:06665492778">
+				+380665492778
+			</a>
+
+			<p>
+				Звоните договоримся &#9742;	
+			</p>
 		</section>
 
 		<footer>
